# vacuum-cleaner-robot

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/vacuum_cleaner_robot/lib/vacuum_cleaner_robot/: avoidance_server  navigator  navigator_node
install/vacuum_cleaner_robot/share/vacuum_cleaner_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vacuum_cleaner_robot/share/vacuum_cleaner_robot/cmake/: vacuum_cleaner_robotConfig.cmake
install/vacuum_cleaner_robot_custom_interfaces/share/vacuum_cleaner_robot_custom_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vacuum_cleaner_robot_custom_interfaces/share/vacuum_cleaner_robot_custom_interfaces/cmake/: export_vacuum_cleaner_robot_custom_interfaces__rosidl_generator_cExport-noconfig.cmake  export_vacuum_cleaner_robot_custom_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_vacuum_cleaner_robot_custom_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_vacuum_cleaner_robot_custom_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  vacuum_cleaner_robot_custom_interfaces__rosidl_typesupport_cExport-noconfig.cmake  (+4 more)
launch/: launch.py
log/: latest_build
src/vacuum_cleaner_robot/: CMakeLists.txt
src/vacuum_cleaner_robot/include/vacuum_cleaner_robot/: navigator.h  obstacle_avoidance_server.h
src/vacuum_cleaner_robot/src/: navigator.cpp  obstacle_avoidance_server.cpp
src/vacuum_cleaner_robot_custom_interfaces/: CMakeLists.txt  package.xml
(+13 files in other folders)
